improve client config and client info handling (intermediate commit)